--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,3 +19,26 @@
   align-items: center;
   flex-direction: column;
 }
+
+nav {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+nav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+nav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+nav a.highlight {
+  background-color: cornflowerblue;
+  color: white;
+}
