--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,6 +1,7 @@
 <nav>
   <%= link_to 'Feed', posts_path, class: 'highlight' %>
   <% if user_signed_in? %>
+    <%= link_to 'Dashboard', dashboard_index_path %>
     <%= link_to 'New Post', new_post_path %>
     <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
   <% else %>
